--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,10 +5,10 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/margin_all"
+    android:paddingTop="@dimen/margin_all"
+    android:paddingRight="@dimen/margin_all"
+    android:paddingBottom="@dimen/margin_all"
     tools:context=".presentation.ui.MainActivity">
 
     <EditText
