Implemented the repository logic to send a checkout.
Pending to connect the repository logic with the retrofit API service.
Implemented a fake userRepository
Implemented a fake transactionRepository
Implemented the logic of the PaymentForm's viewModel
Added a mapper between presentation and domain module
Setup of the payment form validation was successful
ServiceLocator updated to reflect the dependency changes

Submitted by Victor Valencia <cytrux@gmail.com>

--- a/app/src/main/res/layout/fragment_payment_form.xml
+++ b/app/src/main/res/layout/fragment_payment_form.xml
@@ -173,6 +173,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="@dimen/margin_all"
             android:layout_marginBottom="@dimen/margin_all"
+            android:enabled="false"
             android:text="@string/paymentForm_submit_buttton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
