Giving to the Login view a little "remember" feature to avoid entering the user data each time.
From now you have to introduce the right credentials in the login view

Submitted by Victor Valencia <cytrux@gmail.com>

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -40,4 +40,14 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
+    <Button
+        android:id="@+id/menu_button_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_all"
+        android:layout_marginEnd="@dimen/margin_all"
+        android:text="@string/menu_logout_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
