--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,6 +27,10 @@
         <action
             android:id="@+id/action_menuFragment_to_transactionStatusListFragment"
             app:destination="@id/transactionStatusListFragment" />
+        <action
+            android:id="@+id/action_menuFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:launchSingleTop="true" />
     </fragment>
     <fragment
         android:id="@+id/paymentFormFragment"
