--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,8 +13,7 @@
         <action
             android:id="@+id/action_loginFragment_to_menuFragment"
             app:destination="@id/menuFragment"
-            app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/menuFragment"
@@ -27,10 +26,6 @@
         <action
             android:id="@+id/action_menuFragment_to_transactionStatusListFragment"
             app:destination="@id/transactionStatusListFragment" />
-        <action
-            android:id="@+id/action_menuFragment_to_loginFragment"
-            app:destination="@id/loginFragment"
-            app:launchSingleTop="true" />
     </fragment>
     <fragment
         android:id="@+id/paymentFormFragment"
