--- a/app/src/main/res/layout/fragment_payment_summary.xml
+++ b/app/src/main/res/layout/fragment_payment_summary.xml
@@ -11,6 +11,7 @@
     <TextView
         android:id="@+id/textview_pyamentSummary_state"
         style="@style/PaymentSummary_State"
+        android:drawableBottom="@drawable/ic_check_24dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_mono_thin"
