--- a/app/src/main/res/layout/fragment_transaction_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_transaction_detail_dialog.xml
@@ -19,37 +19,45 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="STATE"/>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textview_pyamentSummary_headers"
-            style="@style/PaymentSummary_Keys"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_all"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="@dimen/margin_all"
-            android:textAlignment="textEnd"
-            tools:text="Headers:" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textview_pyamentSummary_values"
-            style="@style/PaymentSummary_Values"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="@dimen/margin_all"
-            android:layout_marginBottom="@dimen/margin_all"
-            tools:text="Values" />
+            <TextView
+                android:id="@+id/textview_pyamentSummary_headers"
+                style="@style/PaymentSummary_Keys"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_all"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="@dimen/margin_all"
+                android:textSize="12sp"
+                android:textAlignment="textEnd"
+                tools:text="Headers:" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textview_pyamentSummary_values"
+                style="@style/PaymentSummary_Values"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="@dimen/margin_all"
+                android:layout_marginBottom="@dimen/margin_all"
+                android:textSize="12sp"
+                tools:text="Values" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <Button
         android:id="@+id/button_transactionDetailDialog_delete"
