Fixing the nav preview

--- a/app/src/main/res/layout/fragment_transaction_status_item.xml
+++ b/app/src/main/res/layout/fragment_transaction_status_item.xml
@@ -20,7 +20,8 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars"/>
 
     <TextView
         android:id="@+id/item_subtitle"
@@ -30,7 +31,7 @@
         app:layout_constraintLeft_toLeftOf="@+id/item_title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.51"
-        tools:text="subtitle" />
+        tools:text="@tools:sample/full_names" />
 
 
     <TextView
@@ -38,12 +39,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Good"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/item_subtitle"
         app:layout_constraintLeft_toRightOf="@+id/item_image"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@tools:sample/cities"/>
 
     <TextView
         android:id="@+id/item_value"
@@ -51,10 +52,10 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/margin_all"
         android:gravity="right"
-        android:text="2018/01/19"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@tools:sample/date/ddmmyy"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
